# Mixed-Reality

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: ETH3D_resize.yaml
examples/configs/: ScanNet.yaml
examples/cube/: cube.gltf
include/: camera_stream.h  depth.h  depth_completion.h  geometry.h  light.h  light_estimation.h  offline_camera.h  plane.h  renderer.h  shader_util.h  util.h
include/util/: camera_util.h  geometry.h  geometry_util.h  matrix_util.h  shader_util.h
scripts/: composite_video.py  generate_video.py  generate_video_grid.py
shaders/: background_vert.glsl  deferred_frag.glsl  deferred_vert.glsl  fragment.glsl  geometry_frag.glsl  geometry_vert.glsl  object_vertex.glsl  vertex.glsl
src/: camera_stream.cpp  depth.cpp  depth_completion.cpp  light.cpp  light_estimation.cpp  main.cpp  offline_camera.cpp  plane.cpp  renderer.cpp  shader_util.cpp
src/util/: camera_util.cpp  geometry_util.cpp  matrix_util.cpp  shader_util.cpp
